Fix alignment of items, fix #570